GF-35832: Remove fixed height on AudioPlayback controls, so it is naturally sized (broke when slider margin was added).  Make FittableColumns noStretch:true so that trackIcon has correct height. Enyo-DCO-1.1-Signed-Off-By: Kevin Schaaf (kevin.schaaf@lge.com)

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -2921,9 +2921,6 @@
   background-color: #333333;
   font-size: 30px;
 }
-.moon-audio-playback-controls {
-  height: 140px;
-}
 .moon-audio-playback-track-icon {
   position: relative;
   top: 6px;
